tests/models/struct/unnamed/u64/fail/max_length.rs
use dade::model;
#[model]
struct TestModel (
   #[field(max_length = 2)]
    u64
);
fn main() {}
